Wed Oct 03 14:00:17 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* build.py: Don't include private variables in the output of epydoc;
	  this makes it more useful as an API reference.
	* docs/introduction.rst: Add a note on error handling.

Wed Oct 03 13:04:01 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/errors.py,xappy/errors_doctest1.txt: Export all the xapian
	  error types (eg, xapian.FooError) as xappy.XapianFooError.  Also,
	  make them all subclasses of xappy.XapianError.  This allow
	  a particular Xapian error to be caught using "except
	  xappy.XapianFooError", or all Xapian errors to be caught using
	  "except xappy.XapianError".

Wed Oct 03 12:36:27 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/highlight.py,xappy/searchconnection_doctest3.txt: Fix from
	  Alex Bowley to coerce maxlen into an int in highlight.py

Tue Oct 02 18:31:54 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Minor correction to a documentation
	  comment.

Tue Oct 02 18:03:31 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Add query_adjust(), allowing the
	  weights of one query to be adjusted based on the results of a
	  second query.
	* xappy/searchconnection_doctest2.txt: Add test for query_adjust()

Mon Oct 01 15:23:11 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Add a __len__() method for
	  SearchResults().
	* xappy/searchconnection_doctest1.txt,
	  xappy/searchconnection_doctest2.txt: Test it

Mon Oct 01 14:23:22 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Add SearchConnection.query_multweight,
	  which produces a query from a subquery by multiplying the weights
	  by a multiplier.
	* xappy/indexerconnection_doctest2.txt: Modify test of "Cannot
	  specify both `allow` and `deny`" to expect new extended message.