@@ -1,3 +1,8 @@
+Sat Oct 06 01:55:34 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* MANIFEST.in,eggsetup.py,setup.py: Basic start of distutils
+	  packaging.
+
 Wed Oct 03 14:00:17 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* build.py: Don't include private variables in the output of epydoc;
